--- a/myfeifei/package.json
+++ b/myfeifei/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "http-proxy-middleware": "^0.19.1",
     "i": "^0.3.6",
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.1",
